--- a/sass/components/_grid-1.scss
+++ b/sass/components/_grid-1.scss
@@ -1,6 +1,6 @@
 .grid-1 {
     display: grid;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: 1fr 3fr;
     height: 100vh;
     @include tablet {
         grid-template-rows: 1fr 1fr 1fr;
